objects/Product_Model_Master__c.object
<CustomObject>
    <description>This Object used by Integration to upload the Product Model data</description>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaunchBoxId__c</fullName>
        <externalId>true</externalId>
        <label>LaunchBoxId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelGroupName__c</fullName>
        <label>ModelGroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelID__c</fullName>
        <externalId>true</externalId>
        <label>ModelID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelMSRP__c</fullName>
        <label>ModelMSRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelMarketingName__c</fullName>
        <label>ModelMarketingName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelYear__c</fullName>
        <label>ModelYear</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSeriesGroupName__c</fullName>
        <label>ParentSeriesGroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeriesGroupName__c</fullName>
        <label>SeriesGroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDivision__c</fullName>
        <label>SubDivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Model Master</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Product Model Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Model Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>